--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/maven,java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=maven,java,eclipse
 
+.classpath
+.project
+
 ### Eclipse ###
 .metadata
 bin/
