--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/maven,java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=maven,java,eclipse
 
-.classpath
+# Eclipse Core
 .project
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 ### Eclipse ###
 .metadata
