--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 	
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/rgrg/*</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 
 	<!-- 한글 처리 -->
